k8s/base/backend/showtime-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showtime-service
  namespace: backend-ns
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
    name: http
  selector:
    app: showtime-service
---
apiVersion: v1
kind: Service
metadata:
  name: showtime-service-canary
  namespace: backend-ns
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
    name: http
  selector:
    app: showtime-service
